FCL-1452 | fix home navigation spacing on desktop

--- a/ds_judgements_public_ui/sass/components/_navigation.scss
+++ b/ds_judgements_public_ui/sass/components/_navigation.scss
@@ -56,6 +56,7 @@
   }
 
   &__item-icon-spacer {
+    padding: $space-1;
     border: 0;
   }
 
